[project]
name = "automation-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["loguru>=0.7.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["automation_utils"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["INP001", "D100"]
select = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"
